# Sweatbox-Builder

./: .eslintrc.cjs  .gitignore  README.md  build-standalone.py  index.html  package-lock.json  package.json  plugins.json  scenario-s2-tower.js  sweatbox-builder-milestone-0-1.bundle  sweatbox-builder-v6-rc3.html  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
reference/: scenario-c1-enroute.js  scenario-s1-ground.js  scenario-s3-approach.js
scripts/: sync-version.mjs
src/: App.tsx  env.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/core/: callsign.ts  generateFromRule.ts  generateSweatbox.ts  geo.ts  ground.ts  model.ts  pool.ts  ramp.ts  rng.ts  route.ts  speed.ts  squawk.ts  stars.ts  tables.ts  uid.ts
src/generators/: RuleWorkbench.tsx  c1.tsx  index.ts  registry.ts  s1.tsx  s2.tsx  s3.tsx
src/io/: bundles.ts  fileSave.ts
src/net/: apis.ts  http.ts
src/panels/: AircraftPoolPanel.tsx  ExportPanel.tsx  FlightPlansPanel.tsx  GeneratorsPanel.tsx  NavdataPanel.tsx  SavedPanel.tsx  ScenarioPanel.tsx  SetupPanel.tsx  Sidebar.tsx  TabBar.tsx
src/parsers/: ese.ts  sct.ts
src/state/: storage.ts  theme.ts
src/ui/: Icon.tsx  ThemeToggle.tsx
tests/: fixtures.def.mjs  harness.mjs  naming.test.ts  oracle.test.ts  parity.test.ts  prng.mjs
tests/fixtures/: c1-enroute-mach.scn  s1-ground-lfbo.scn  s3-custom-arrivals.scn  s3-departures-natural.scn  s3-pool-routecontains.scn  serializer-manual.scn
(+2 files in other folders)
