[package]
name = "sweatbox-builder"
version = "6.0.2"
description = "Sweatbox Builder for EuroScope"
authors = ["ZeFlyingFrog"]
edition = "2021"
rust-version = "1.77.2"

# The library is what mobile/desktop entry points call into; main.rs is a thin
# wrapper. crate-type list is the Tauri v2 standard for desktop + mobile.
[lib]
name = "sweatbox_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
